# cmux-win

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: event.rs  lib.rs  main.rs
src-tauri/src/commands/: git.rs  mod.rs  notification.rs  ssh.rs  tab.rs  terminal.rs
src-tauri/src/git/: mod.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/terminal/: buffer.rs  mod.rs  parser.rs  pty.rs  state.rs
src/components/: BrowserPane.tsx  GitStatus.tsx  NotificationRing.tsx  Sidebar.tsx  SshDialog.tsx  TabBar.tsx  Terminal.tsx  TerminalWebGL.tsx
src/hooks/: useTabs.ts  useTerminal.ts  useWebGLTerminal.ts
src/stores/: terminalStore.ts
src/styles/: main.css  notification.css  sidebar.css  ssh.css  terminal.css
src/types/: terminal.ts
