[package]
name = "cmux-win"
version = "0.1.0"
description = "A Windows terminal emulator inspired by cmux"
authors = ["cmux-win contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "cmux_win_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# VT Parser (same as Alacritty)
vte = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# UUID for terminal IDs
uuid = { version = "1", features = ["v4"] }

# Concurrency
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.11"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Pipes",
] }

# Unix-specific (for cross-platform support)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["pty", "process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
